restyle & publication update

--- a/_publications/2022_msc.md
+++ b/_publications/2022_msc.md
@@ -6,6 +6,6 @@ date: 2022-08-31
 pubtype: "academic"
 venue: 'MSc. Thesis'
 paperurl: '/files/pdf/2022_msc.pdf'
-citation: 'Cornelius V. Braun. MSc Thesis. Imperial College London, 2022.'
+citation: 'Cornelius V. Braun. MSc Thesis. <em>Imperial College London</em>, 2022.'
 code: 'https://github.com/cornelius-braun/constrained-bo-trees'
 ---
